<resources>
    <string name="app_name">ParkingClient</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="application_name">PARK SPOT</string>
    <string name="made_with">MADE WITH</string>
    <string name="by_the">BY THE</string>
    <string name="team">TEAM</string>
    <string name="progress_downloading">Downloading</string>
    <string name="download_success">Success</string>
    <string name="download_failure">Failure</string>

    <string name="splash_schreen">P A R K\nS P O T</string>
</resources>
