<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/field_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/roundedbutton"
        android:ellipsize="end"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/field_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedbutton"
        android:ellipsize="end"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"/>


    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</LinearLayout>
